[gd_scene load_steps=12 format=2]

[ext_resource path="res://SA Assets/Usable/Menu/Start.png" type="Texture" id=1]
[ext_resource path="res://SA Assets/Usable/Backgrounds/menu.png" type="Texture" id=2]
[ext_resource path="res://SA Assets/Usable/Menu/Start1.png" type="Texture" id=3]
[ext_resource path="res://MainMenu.gd" type="Script" id=4]
[ext_resource path="res://SA Assets/Usable/Menu/About.png" type="Texture" id=5]
[ext_resource path="res://SA Assets/Usable/Menu/About1.png" type="Texture" id=6]
[ext_resource path="res://SA Assets/Usable/Menu/Option.png" type="Texture" id=7]
[ext_resource path="res://SA Assets/Usable/Menu/Quit.png" type="Texture" id=8]
[ext_resource path="res://SA Assets/Usable/Menu/Option1.png" type="Texture" id=9]
[ext_resource path="res://SA Assets/Usable/Menu/Quit1.png" type="Texture" id=10]
[ext_resource path="res://SA Assets/Usable/Audio/Awakening of the Earth Spirits - Ryuuha Mikakutei.ogg" type="AudioStream" id=11]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -224.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="Buttons"]
margin_right = 192.0
margin_bottom = 40.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="Options" type="TextureButton" parent="Buttons"]
margin_top = 48.0
margin_right = 192.0
margin_bottom = 88.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 9 )

[node name="About" type="TextureButton" parent="Buttons"]
margin_top = 96.0
margin_right = 192.0
margin_bottom = 136.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Quit" type="TextureButton" parent="Buttons"]
margin_top = 144.0
margin_right = 192.0
margin_bottom = 184.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 10 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
